force-app/main/default/objects/AR__c/AR__c.object-meta.xml
<CustomObject>
    <label>AR</label>
    <nameField>
        <displayFormat>AR{YYYYMMDD}{00000}</displayFormat>
        <label>AR Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>