force-app/main/default/objects/AR__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AR</relationshipLabel>
    <relationshipName>AR</relationshipName>
    <type>Lookup</type>
</CustomField>