force-app/main/default/objects/AR__c/fields/AddAmount__c.field-meta.xml
<CustomField>
    <fullName>AddAmount__c</fullName>
    <label>Add Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>