force-app/main/default/objects/AR__c/fields/AdjustmentTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>AdjustmentTaxAmount__c</fullName>
    <label>Adjustment Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>