force-app/main/default/objects/AR__c/fields/AR__c.field-meta.xml
<CustomField>
    <fullName>AR__c</fullName>
    <label>A/R</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>