force-app/main/default/objects/AR__c/fields/ARDate__c.field-meta.xml
<CustomField>
    <fullName>ARDate__c</fullName>
    <label>AR Date</label>
    <type>DateTime</type>
</CustomField>