force-app/main/default/objects/AR__c/fields/ARDocumentNumber__c.field-meta.xml
<CustomField>
    <fullName>ARDocumentNumber__c</fullName>
    <label>AR Document Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>