force-app/main/default/objects/AR__c/fields/ARNet__c.field-meta.xml
<CustomField>
    <fullName>ARNet__c</fullName>
    <label>A/R (NET)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>