force-app/main/default/objects/AR__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To Dealer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>AR</relationshipLabel>
    <relationshipName>AR</relationshipName>
    <type>Lookup</type>
</CustomField>