force-app/main/default/objects/AR__c/fields/ExpireDate__c.field-meta.xml
<CustomField>
    <fullName>ExpireDate__c</fullName>
    <label>Expire Date</label>
    <type>DateTime</type>
</CustomField>