force-app/main/default/objects/AR__c/fields/SalesRevenue__c.field-meta.xml
<CustomField>
    <fullName>SalesRevenue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Revenue</label>
    <referenceTo>SalesRevenue__c</referenceTo>
    <relationshipLabel>AR</relationshipLabel>
    <relationshipName>AR</relationshipName>
    <type>Lookup</type>
</CustomField>